# SideHustler

./: .gitignore  instructions.md  package-lock.json  package.json  vite.config.ts
.github/instructions/: sidehustle-instructions.txt.instructions.md
src/: index.html  main.js  prompts.yaml  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  logger.rs  main.rs
src-tauri/src/ai/providers/: ollama_provider.rs
src/components/: Console.js  Controls.js  EditorA.js  EditorB.js  TransformationList.js  button-handlers.js
src/utils/: debounce.js
