[package]
name = "sidehustler"
version = "0.1.0"
description = "A Functional Fiction"
authors = ["Julian Bleecker / Near Future Laboratory"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sidehustler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
dotenv = "0.15.0"
async-openai = "0.27.2"
chrono = { version = "0.4.39", features = ["serde"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = { version = "2.0.0-rc.2" }
tauri-plugin-dialog = "2"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4.0"
tokio = { version = "1.43", features = ["full", "test-util"] }
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
secrecy = "0.10.3"
sodiumoxide = "0.2.7"
ollama-rs = "0.2.6"
